--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Matthew Meinzer",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^1.2.0"
+    "cheerio": "^1.0.0-rc.2",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   }
 }
