--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Matthew Meinzer",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
+    "jsdom": "^11.7.0",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
   }
