--- a/package.json
+++ b/package.json
@@ -9,8 +9,20 @@
   "author": "Matthew Meinzer",
   "license": "ISC",
   "dependencies": {
+    "firebase-admin": "^5.12.0",
     "jsdom": "^11.7.0",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "prettier-eslint": "^8.8.1"
   }
 }
